# open-ghana-id

./: Dockerfile  Makefile  README.md  app.py  config.py  docker-compose.yml  models.py  pyproject.toml
routers/: __init__.py  drivers_license.py  ghana_card.py  ghana_card_number.py  passport.py  tin.py  voters_id.py
services/: gra_client.py  image_processing.py  mrz.py  ocr.py  qr.py
tests/: conftest.py  test_gra_routes.py  test_health.py  test_image_routes_with_samples.py
